--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-grid-layout": "^1.5.2",
+    "react-router-dom": "^7.9.6",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
